2006-11-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Fix regexp.

2006-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-read-file-entry): Share names can
	contain spaces.
	(tramp-smb-open-connection): Quote arguments.

2006-11-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-remote-path): `tramp-default-remote-path'
	contains a trailing ":" under FreeBSD.

2006-11-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-get-connection-property)
	(tramp-set-connection-property): Work with a copy of the vector in
	order to avoid side effects.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Erase the buffer
	when the process is killed, because it is reused.

2006-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-copy-size-limit): New defcustom.
	(tramp-methods): Add "ControlPath" and "ControlMaster" to scp,
	scp1 and scp2 methods.  Suggested by Andreas Schwab
	<schwab@suse.de>.
	Fix error in `tramp-login-args' of psftp.
	Rearrange entries for better readability.
	Change syntax of `tramp-copy-args' to that of `tramp-login-args'.
	Rename `tramp-copy-keep-date-arg' to `tramp-copy-keep-date', and
	change meaning.  Describe "%t" and "%k" in the doc string.
	(tramp-default-method): scp is the default method.
	(tramp-do-copy-or-rename-file, tramp-handle-file-local-copy)
	(tramp-handle-write-region): Check for `tramp-copy-size-limit'.
	(tramp-do-copy-or-rename-file-out-of-band): Simplify
	implementation.
	(tramp-maybe-open-connection): Compute format spec only once.

2006-11-05  Lars Hansen  <larsh@soem.dk>

	* tramp.el (with-parsed-tramp-file-name): Correct debug spec.
	Highlight as keyword.
	(tramp-do-copy-or-rename-file): Correct data for
	'file-already-exists.
	(tramp-touch): Quote file name.

2006-10-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Add question from plink.