@@ -1,3 +1,13 @@
+2006-11-24  Lars Hansen  <larsh@soem.dk>
+
+	* tramp.el (tramp-default-method): Under Windows, change from
+	plink to pscp.
+	(tramp-copy-failed-regexp, tramp-action-copy-failed): Add.
+	(tramp-actions-copy-out-of-band):
+	Add pair (tramp-copy-failed-regexp tramp-action-copy-failed).
+	(tramp-action-out-of-band): Move "Permission denied" handling to
+	tramp-action-copy-failed.
+
 2006-11-24  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-yn-prompt-regexp): Fix regexp.
